--- a/revocation.html
+++ b/revocation.html
@@ -3,12 +3,95 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>发布申购, 转让</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./css/custom.css">
 </head>
 
 <body>
+
+    <div class="my-modal modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="#" class="form-horizontal">
+                    <div class="form-group">
+                        <div class="col-md-12 text-center">
+                            <h4>确认要撤销订单？</h4>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-danger col-md-9 col-md-offset-3 success">确&nbsp;定</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-default col-md-9 cancel">取消</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="my-modal modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="#" class="form-horizontal">
+                    <div class="form-group">
+                        <div class="col-md-12 text-center">
+                            <h4>部分债券支付中，部分撤单？</h4>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-danger col-md-9 col-md-offset-3 success">确&nbsp;定</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-default col-md-9 cancel">取消</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="my-modal modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="#" class="form-horizontal">
+                    <div class="form-group">
+                        <div class="col-md-12 text-center">
+                            <h4>删除后该委托订单不再显示？</h4>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-danger col-md-9 col-md-offset-3 success">确&nbsp;定</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#" class="btn btn-default col-md-9 cancel">取消</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
     <div class="my-modal modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
@@ -19,13 +102,13 @@
                 <form action="#" class="form-horizontal">
                     <div class="form-group">
                         <div class="col-md-offset-1 col-md-7">
-                            <h4>转让报价表</h4>
+                            <h4>转让订单</h4>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-3">价格:</label>
-                        <div class="col-md-7">
-                          <input type="number" step="0.01" value="0.00" class="form-control">
+                        <div class="col-md-7 text-center">
+                            <label class="control-label">99.33</label>
                         </div>
                     </div>
                     <div class="form-group error">
@@ -61,15 +144,18 @@
 
                     <div class="form-group">
                       <div class="col-md-offset-3 col-md-7">
-                        <input type="submit" value="支&nbsp;付" class="form-control btn btn-danger">
+                        <input type="submit" value="确&nbsp;定" class="form-control btn btn-danger">
                       </div>
                     </div>
                 </form>
             </div>
+            <div class="modal-footer">
+            </div>
         </div>
     </div>
 
-      <div class="my-modal modal-dialog modal-sm">
+
+    <div class="my-modal modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
@@ -79,13 +165,13 @@
                 <form action="#" class="form-horizontal">
                     <div class="form-group">
                         <div class="col-md-offset-1 col-md-7">
-                            <h4>求购报价单</h4>
+                            <h4>转让订单</h4>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-3">价格:</label>
-                        <div class="col-md-7">
-                          <input type="number" step="0.01" value="0.00" class="form-control">
+                        <div class="col-md-7 text-center">
+                            <label class="control-label">99.33</label>
                         </div>
                     </div>
                     <div class="form-group error">
@@ -106,15 +192,15 @@
                         </div>
                     </div>
 
+
                     <div class="form-group">
-                      <div class="col-md-3 icon-safe">
-                        <img src="./image/safe.png" alt="">
-                      </div>
-                      <div class="col-md-7">
+                      <div class="col-md-offset-3 col-md-7">
                         <input type="submit" value="支&nbsp;付" class="form-control btn btn-danger">
                       </div>
                     </div>
                 </form>
+            </div>
+            <div class="modal-footer">
             </div>
         </div>
     </div>
@@ -158,7 +244,7 @@
 
                     <div class="form-group">
                       <div class="col-md-offset-3 col-md-7">
-                        <input type="submit" value="发&nbsp;布" class="form-control btn btn-danger">
+                        <input type="submit" value="充&nbsp;值" class="form-control btn btn-danger">
                       </div>
                     </div>
                 </form>
@@ -166,9 +252,18 @@
         </div>
     </div>
 
+      <div class="success modal-dialog modal-xs">
+        <div class="modal-content">
+          <div class="modal-body text-center">
+                <div class="row">
 
-
-
+                    <p>Harold Ross</p>
+                    <p>求购300份</p>
+                    <a href="#" class="btn btn-xs btn-success col-xs-offset-3 col-xs-6">撤&nbsp;单</a>
+                </div>
+          </div>
+        </div>
+      </div>
 
 
 </body>
