--- a/privacy-setting.html
+++ b/privacy-setting.html
@@ -15,7 +15,7 @@
             <div class="text-center">
                 <h1>隐私设置</h1>
             </div>
-            <hr width="7%" class="text-center" />
+            <hr width="110px" class="text-center" />
 
             <div class="col-md-12">
                 <div class="pull-right">
@@ -64,7 +64,7 @@
         var elems = Array.prototype.slice.call(document.querySelectorAll('.checkbox-switch'));
 
         elems.forEach(function(html) {
-          var switchery = new Switchery(html, {color : '#938C8C'});
+          var switchery = new Switchery(html, {color : '#7586A2'});
         });
     </script>
 </html>
