--- a/price.html
+++ b/price.html
@@ -23,9 +23,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3">价格:</label>
+                        <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7">
-                          <input type="number" step="0.01" value="0.00" class="form-control">
+                          <input type="number" step="0.01" value="0.00" min="0.00" class="form-control">
                         </div>
                     </div>
                     <div class="form-group error">
@@ -35,9 +35,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3">数量:</label>
+                        <label class="control-label col-md-3 text-gray">数量:</label>
                         <div class="col-md-7">
-                          <input type="number"  value="0" class="form-control">
+                          <input type="text" value="0" pattern="[0-9]*" class="form-control">
                         </div>
                     </div>
                     <div class="form-group error">
@@ -47,21 +47,20 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3">验证:</label>
+                        <label class="control-label col-md-3 text-gray">验证:</label>
                         <div class="col-md-7">
                           <input type="text" class="form-control">
                         </div>
                     </div>
                     <div class="form-group error">
-                        <div class="col-md-offset-3 col-md-9  gray-text">
-                          请填写验证码 ,35s后可
-                          <a href="#">重新发送</a>
+                        <div class="col-md-offset-3 col-md-9 gray-text">
+                          请填写验证码 ,35s后可<a href="#">重新发送</a>
                         </div>
                     </div>
 
                     <div class="form-group">
                       <div class="col-md-offset-3 col-md-7">
-                        <input type="submit" value="支&nbsp;付" class="form-control btn btn-danger">
+                        <input type="submit" value="支&nbsp;付" class="form-control btn btn-pay">
                       </div>
                     </div>
                 </form>
@@ -83,7 +82,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3">价格:</label>
+                        <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7">
                           <input type="number" step="0.01" value="0.00" class="form-control">
                         </div>
@@ -95,9 +94,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3">数量:</label>
+                        <label class="control-label col-md-3 text-gray">数量:</label>
                         <div class="col-md-7">
-                          <input type="number"  value="0" class="form-control">
+                          <input type="text"  pattern="[0-9]*" value="0" class="form-control">
                         </div>
                     </div>
                     <div class="form-group error">
@@ -111,7 +110,7 @@
                         <img src="./image/safe.png" alt="">
                       </div>
                       <div class="col-md-7">
-                        <input type="submit" value="支&nbsp;付" class="form-control btn btn-danger">
+                        <input type="submit" value="支&nbsp;付" class="form-control btn btn-pay">
                       </div>
                     </div>
                 </form>
@@ -133,7 +132,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3">价格:</label>
+                        <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7">
                           <input type="number" step="0.01" value="0.00" class="form-control">
                         </div>
@@ -145,9 +144,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3">数量:</label>
+                        <label class="control-label col-md-3 text-gray">数量:</label>
                         <div class="col-md-7">
-                          <input type="number"  value="0" class="form-control">
+                          <input type="text"  pattern="[0-9]*" value="0" class="form-control">
                         </div>
                     </div>
                     <div class="form-group error">
@@ -158,7 +157,7 @@
 
                     <div class="form-group">
                       <div class="col-md-offset-3 col-md-7">
-                        <input type="submit" value="发&nbsp;布" class="form-control btn btn-danger">
+                        <input type="submit" value="发&nbsp;布" class="form-control btn btn-pay">
                       </div>
                     </div>
                 </form>
