--- a/remind-setting.html
+++ b/remind-setting.html
@@ -13,7 +13,7 @@
             <div class="text-center">
                 <h1>提醒设置</h1>
             </div>
-            <hr width="7%" class="text-center" />
+            <hr width="110px" class="text-center" />
 
             <div class="col-md-12">
                 <a href="#" class="btn btn-default pull-right">修改</a>
