--- a/remind-setting2.html
+++ b/remind-setting2.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./css/custom.css">
-    <link rel="stylesheet" href="./css/square/blue.css">
+    <link rel="stylesheet" href="./css/minimal/grey.css">
 </head>
 <body>
     <div class="container">
@@ -14,11 +14,11 @@
             <div class="text-center">
                 <h1>提醒设置</h1>
             </div>
-            <hr width="7%" class="text-center" />
+            <hr width="110px" class="text-center" />
 
             <div class="col-md-12">
                 <a href="#" class="btn btn-default pull-right">取消</a>
-                <a href="#" class="btn btn-gray pull-right">保存</a>
+                <a href="#" class="btn btn-save pull-right">保存</a>
                 <h4>SNS消息提醒<img src="./image/Fill 109.png" alt=""></h4>
                 <div class="remind-setting-option">
                     <p>
@@ -43,12 +43,16 @@
                     <p>
                         <input type="checkbox"> 我被某人@
                     </p>
+                    <p class="radio-group">
+                        <input type="radio" name="remind" >全部提醒
+                        <input type="radio" name="remind" >仅关注的人提醒
+                    </p>
                 </div>
             </div>
 
             <div class="col-md-12">
                 <a href="#" class="btn btn-default pull-right">取消</a>
-                <a href="#" class="btn btn-gray pull-right">保存</a>
+                <a href="#" class="btn btn-save pull-right">保存</a>
                 <h4>投资流程<img src="./image/Fill 144.png" alt=""></h4>
                 <div class="remind-setting-option">
                     <p>
@@ -73,7 +77,7 @@
 
            <div class="col-md-12">
                 <a href="#" class="btn btn-default pull-right">取消</a>
-                <a href="#" class="btn btn-gray pull-right">保存</a>
+                <a href="#" class="btn btn-save pull-right">保存</a>
                 <h4>促销活动提醒<img src="./image/Fill 144.png" alt=""><img src="./image/Fill 185.png" alt=""></h4>
                 <div class="remind-setting-option">
                     <p>
@@ -101,8 +105,8 @@
     <script type="text/javascript">
         $(document).ready(function(){
           $('input').iCheck({
-            checkboxClass: 'icheckbox_square-blue',
-            radioClass: 'iradio_square-blue',
+            checkboxClass: 'icheckbox_minimal-grey',
+            radioClass: 'iradio_minimal-grey',
             increaseArea: '20%' // optional
           });
         });
