--- a/revocation.html
+++ b/revocation.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-6">
-                            <a href="#" class="btn btn-danger col-md-9 col-md-offset-3 success">确&nbsp;定</a>
+                            <a href="#" class="btn btn-pay col-md-9 col-md-offset-3 success">确&nbsp;定</a>
                         </div>
                         <div class="col-md-6">
                             <a href="#" class="btn btn-default col-md-9 cancel">取消</a>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-6">
-                            <a href="#" class="btn btn-danger col-md-9 col-md-offset-3 success">确&nbsp;定</a>
+                            <a href="#" class="btn btn-pay col-md-9 col-md-offset-3 success">确&nbsp;定</a>
                         </div>
                         <div class="col-md-6">
                             <a href="#" class="btn btn-default col-md-9 cancel">取消</a>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-6">
-                            <a href="#" class="btn btn-danger col-md-9 col-md-offset-3 success">确&nbsp;定</a>
+                            <a href="#" class="btn btn-pay col-md-9 col-md-offset-3 success">确&nbsp;定</a>
                         </div>
                         <div class="col-md-6">
                             <a href="#" class="btn btn-default col-md-9 cancel">取消</a>
@@ -106,9 +106,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3">价格:</label>
+                        <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7 text-center">
-                            <label class="control-label">99.33</label>
+                            <label class="control-label text-gray">99.33</label>
                         </div>
                     </div>
                     <div class="form-group error">
@@ -118,9 +118,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3">数量:</label>
+                        <label class="control-label col-md-3 text-gray">数量:</label>
                         <div class="col-md-7">
-                          <input type="number"  value="0" class="form-control">
+                          <input type="text" pattern="[0-9]*" value="0" class="form-control">
                         </div>
                     </div>
                     <div class="form-group error">
@@ -130,7 +130,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3">验证:</label>
+                        <label class="control-label col-md-3 text-gray">验证:</label>
                         <div class="col-md-7">
                           <input type="text" class="form-control">
                         </div>
@@ -144,7 +144,7 @@
 
                     <div class="form-group">
                       <div class="col-md-offset-3 col-md-7">
-                        <input type="submit" value="确&nbsp;定" class="form-control btn btn-danger">
+                        <input type="submit" value="确&nbsp;定" class="form-control btn btn-pay">
                       </div>
                     </div>
                 </form>
@@ -169,21 +169,16 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3">价格:</label>
+                        <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7 text-center">
-                            <label class="control-label">99.33</label>
-                        </div>
-                    </div>
-                    <div class="form-group error">
-                        <div class="col-md-offset-3 col-md-9 ">
-                          报价需在80.00～120.00元/份之间
+                            <label class="control-label text-gray">99.33</label>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3">数量:</label>
+                        <label class="control-label col-md-3 text-gray">数量:</label>
                         <div class="col-md-7">
-                          <input type="number"  value="0" class="form-control">
+                          <input type="text" pattern="[0-9]*" value="0" class="form-control">
                         </div>
                     </div>
                     <div class="form-group error">
@@ -195,7 +190,7 @@
 
                     <div class="form-group">
                       <div class="col-md-offset-3 col-md-7">
-                        <input type="submit" value="支&nbsp;付" class="form-control btn btn-danger">
+                        <input type="submit" value="支&nbsp;付" class="form-control btn btn-pay">
                       </div>
                     </div>
                 </form>
@@ -210,7 +205,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
                 </button>
-            </div>
+            </div>1
             <div class="modal-body">
                 <form action="#" class="form-horizontal">
                     <div class="form-group">
@@ -219,7 +214,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3">价格:</label>
+                        <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7">
                           <input type="number" step="0.01" value="0.00" class="form-control">
                         </div>
@@ -231,9 +226,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3">数量:</label>
+                        <label class="control-label col-md-3 text-gray">数量:</label>
                         <div class="col-md-7">
-                          <input type="number"  value="0" class="form-control">
+                          <input type="text" pattern="[0-9]*" value="0" class="form-control">
                         </div>
                     </div>
                     <div class="form-group error">
@@ -244,7 +239,7 @@
 
                     <div class="form-group">
                       <div class="col-md-offset-3 col-md-7">
-                        <input type="submit" value="充&nbsp;值" class="form-control btn btn-danger">
+                        <input type="submit" value="充&nbsp;值" class="form-control btn btn-pay">
                       </div>
                     </div>
                 </form>
