--- a/price.html
+++ b/price.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <title>发布申购, 转让</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./css/font-awesome.css">
     <link rel="stylesheet" href="./css/custom.css">
+    <link href="./css/bootstrap-spinner.css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,7 +27,13 @@
                     <div class="form-group">
                         <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7">
-                          <input type="number" step="0.01" value="0.00" min="0.00" class="form-control">
+                            <!-- <input type="number" step="0.01" value="0.1" min="0.00" max="10.00" class="form-control"> -->
+                            <div class="input-group spinner" data-trigger="spinner">
+                              <input type="text" value="0" min="0" step="0.01" data-rule="currency" class="form-control">
+                              <span class="input-group-addon">
+                                <a href="javascript:;" class="spin-up" data-spin="up"><i class="fa fa-sort-asc"></i></a>
+                                <a href="javascript:;" class="spin-down" data-spin="down"><i class="fa fa-sort-desc"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group error">
@@ -84,7 +92,12 @@
                     <div class="form-group">
                         <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7">
-                          <input type="number" step="0.01" value="0.00" class="form-control">
+                            <div class="input-group spinner" data-trigger="spinner">
+                              <input type="text" value="0" min="0" step="0.01" data-rule="currency" class="form-control">
+                              <span class="input-group-addon">
+                                <a href="javascript:;" class="spin-up" data-spin="up"><i class="fa fa-sort-asc"></i></a>
+                                <a href="javascript:;" class="spin-down" data-spin="down"><i class="fa fa-sort-desc"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group error">
@@ -134,7 +147,12 @@
                     <div class="form-group">
                         <label class="control-label col-md-3 text-gray">价格:</label>
                         <div class="col-md-7">
-                          <input type="number" step="0.01" value="0.00" class="form-control">
+                            <div class="input-group spinner" data-trigger="spinner">
+                              <input type="text" value="0" min="0" step="0.01" data-rule="currency" class="form-control">
+                              <span class="input-group-addon">
+                                <a href="javascript:;" class="spin-up" data-spin="up"><i class="fa fa-sort-asc"></i></a>
+                                <a href="javascript:;" class="spin-down" data-spin="down"><i class="fa fa-sort-desc"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group error">
@@ -171,5 +189,7 @@
 
 
 </body>
+<script type="text/javascript" src="./js/jquery-2.1.1.js"></script>
+<script type="text/javascript" src="./js/jquery.spinner.js"></script>
 
 </html>
