--- a/revocation.html
+++ b/revocation.html
@@ -205,7 +205,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
                 </button>
-            </div>1
+            </div>
             <div class="modal-body">
                 <form action="#" class="form-horizontal">
                     <div class="form-group">
