--- a/remind-setting2.html
+++ b/remind-setting2.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./css/custom.css">
     <link rel="stylesheet" href="./css/minimal/grey.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="./js/html5shiv.min.js"></script>
+      <script src="./js/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
     <div class="container">
@@ -100,7 +106,7 @@
         </div>
     </div>
 </body>
-    <script src="./js/jquery-2.1.1.js" type="text/javascript"></script>
+    <script src="./js/jquery-1.11.1.js" type="text/javascript"></script>
     <script src="./js/icheck.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function(){
